@@ -17,6 +17,7 @@ x2gokdrive (0.0.0.1-0x2go1) UNRELEASED; urgency=medium
     - support sending and recieving selections on demand. Support reading and writing INCR properties.
     - move declaration of RemoteHostVars from x2gokdriveremote.h to x2gokdriveremote.c.
     - add some support for HTML5 client (like converting pointer cursors to PNG format).
+    - fix crashing if client is sending unrequested selection.
 
   [ Mihai Moldovan ]
   * Initial release:
